# ChangeLog for net-analyzer/nagios-check_updates
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  28 Sep 2014; Johann Schmitz <ercpe@gentoo.org>
  nagios-check_updates-0.2.ebuild:
  Stable it

*nagios-check_updates-0.2 (28 Sep 2014)

  28 Sep 2014; Johann Schmitz <ercpe@gentoo.org>
  +nagios-check_updates-0.2.ebuild:
  Version bump

  10 Jun 2014;  <johann@gentoo.org> nagios-check_updates-0.1.1.ebuild:
  Stable amd64, x86

  06 Jun 2014; Johann Schmitz <ercpe@gentoo.org>
  nagios-check_updates-0.1.1.ebuild:
  Dropped useless lines

*nagios-check_updates-0.1.1 (06 Jun 2014)

  06 Jun 2014; Johann Schmitz <ercpe@gentoo.org> +metadata.xml,
  +nagios-check_updates-0.1.1.ebuild:
  New ebuild for nagios-check_updates