@@ -1,2 +1,3 @@
 DIST nagios-check_updates-0.1.1.tar.gz 8422 SHA256 f8b1fd1416d52319bda8241714d9b009e1136ecfd0fdbbf2552db763e771136b SHA512 d9155bed96724d77281b9ed51069059343f059ac30b8bb03a289adf271bc51b038aa6af99f4a326150ed95f5acb2541d42c532620e8e703c43814f33bc9b9068 WHIRLPOOL a034e5c51e37e595a42a81f1ee30645537505fe4084d9510ce6e94605c68d8d964a8ea3df9017fba93c7adcd43009f9808f8396d50d8b4bdeeb6c2d1ee4cdec4
+DIST nagios-check_updates-0.2.1.tar.gz 8475 SHA256 479e3392fcc28dea5908d40c2ee7940605965aa3f3c80f6be8ce06eae54ff8d9 SHA512 f53631f0543befed6151d7babf7ff800b7d6d42800bfe3c63017a80e329fa492d8a5fdd49b456874fb2ecc7596da5729593474a66ea57f87be5290e62c8cf09e WHIRLPOOL 1da66bb99f895d6f6baf69120dcd7fb7b08af3d59b6cd0cc8ed2e6fba289d55b954fb3da07fc6d6e0b016fc12ddab7868c36583f0b802f6198ef689021c52363
 DIST nagios-check_updates-0.2.tar.gz 8446 SHA256 7b9161bc9e8308c89bad7c1d4ac25b754f17ed93016f7ad2adddb7f3e2fcd98c SHA512 89d7073b965ab15336df32481c81fe34d0f3f4bc3fba1c20632dccaa17881697ddc90637fa2018c03743bb7744d731c760bd0f1993f9b3eee1041fab8799ff86 WHIRLPOOL 0eca6b92e61ae173abd8cd320ead6a968e9e21b85e7500c0c6fd36bb2166ee9aafeaf9c1632cecb561a04f239b53b81a292c49f98d66a5aaee579c04aad51a3b
