@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*nagios-check_updates-0.2.1 (01 Nov 2014)
+
+  01 Nov 2014; Johann Schmitz <ercpe@gentoo.org>
+  +nagios-check_updates-0.2.1.ebuild:
+  Updated ebuild
+
   28 Sep 2014; Johann Schmitz <ercpe@gentoo.org>
   nagios-check_updates-0.2.ebuild:
   Stable it
